--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,17 @@ a:hover {
   padding-top: 40px;
   flex-wrap: wrap;
 }
-
+.titulo {
+  font-weight: bold;
+  text-align: left;
+}
+.parrafo {
+  text-align: left;
+  font-size: 18px;
+  line-height: 1.7;
+  margin-bottom: 30px;
+  max-width: 650px;
+}
 .presentacion {
   flex: 1;
 }
