--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,10 @@ a:hover {
     font-size: 2rem;
     text-align: center;
   }
+  .botones {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .presentacion h2 {
