--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,10 @@ a:hover {
     flex-direction: column;
     align-items: center;
   }
+  .imagen {
+    margin-top: 20px;
+    justify-content: center;
+  }
 }
 
 .presentacion h2 {
